Added foorter to the page containing main github link and email.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -86,9 +86,15 @@ h1 {
 }
 
 p {
-  color: var(--ForgroundCol);
+  color: var(--SubTextCol);
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.Footer {
+  padding: 8px;
+  margin-top: 24px;
+  margin-bottom: 32px;
 }
 
 .Collapsible {
