--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,55 @@
+body{
+  background: linear-gradient(-45deg, #66112b, #3a4466, #181425);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.titlebar{
+  color: #C44370;
+  text-align: center;
+  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
+
+  text-shadow: 0px 5px #0000002f;
+}
+
+.emailText{
+  color: #C44370;
+  text-align: center;
+  padding-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+
+  text-shadow: 0px 5px #0000002f;
+}
+
 .card  {
-  padding: 0.5rem;
+  padding: 1rem;
+  background-color: #302631;
+  box-shadow: 0px 10px #0000002f;
+
+  border-color: #C44370;
+  border: 3px solid #C44370;
+  border-radius: 4px;
+
+  color: #C44370;
+}
+
+.card img {
+  box-shadow: 0px 5px #0000002f;
 }
 
 .col-sm6 {
@@ -16,18 +66,18 @@ hr.hr-text {
   position: relative;
     border: none;
     height: 1px;
-    background: #999;
-    margin-left: 12rem;
-    margin-right: 12rem;
+    background: #C44370;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 hr.hr-text::before {
   content: attr(data-content);
   display: inline-block;
-  background: #fff;
+  background: #C44370;
   font-weight: bold;
   font-size: 0.85rem;
-  color: #999;
+  color: #302631;
   border-radius: 30rem;
   padding: 0.2rem 2rem;
   position: absolute;
@@ -35,3 +85,45 @@ hr.hr-text::before {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+body .modal-dialog { /* Width */
+  max-width: 60%;
+  width: auto !important;
+  display: inline-block;
+}
+
+.modal {
+  z-index: -1;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  background: #302631;
+
+}
+
+.modal-open .modal {
+   z-index: 1050;
+}
+
+.blob-button
+{
+  padding: 0.5rem;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+
+  line-height: 1;
+  transition: all .5s ease;
+  color: #C44370;
+  border: 3px solid #C44370;
+  text-align: center;
+  background-color: transparent;
+  outline: none;
+  border-radius: 4px;
+}
+
+.blob-button:hover{
+  color: #302631;
+  background-color: #C44370;
+  text-decoration: none;
+}
+
