--- a/PortfolioWebsite/src/index.css
+++ b/PortfolioWebsite/src/index.css
@@ -7,7 +7,7 @@
   .sidebar-icon {
     @apply relative flex items-center justify-center 
     h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
-    text-purple-500
+    text-yellow-500
     hover:text-white
     transition-all duration-300 ease-linear
     cursor-pointer;
