--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(-45deg, #66112b, #3a4466, #181425);
+  background: linear-gradient(-45deg, #0a0c13, #0e0611, #000000);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -17,9 +17,8 @@ body{
 }
 
 .titlebar{
-  color: #C44370;
+  color: #ffffff;
   text-align: center;
-  padding-top: 1rem;
   display: flex;
   justify-content: center;
 
@@ -27,9 +26,8 @@ body{
 }
 
 .emailText{
-  color: #C44370;
+  color: #ffffff;
   text-align: center;
-  padding-bottom: 1rem;
   display: flex;
   justify-content: center;
 
@@ -38,14 +36,17 @@ body{
 
 .card  {
   padding: 1rem;
-  background-color: #302631;
-  box-shadow: 0px 10px #0000002f;
+  background-color: #120e13;
+  box-shadow: 0px 10px #00000071;
 
-  border-color: #C44370;
-  border: 3px solid #C44370;
+  min-height: 26rem;
+
+  border-color: #e43b44;
+  border: 3px solid #e43b44;
   border-radius: 4px;
 
-  color: #C44370;
+  color: #c7baba;
+  text-shadow: 0px 4px #0000005b;
 }
 
 .card img {
@@ -66,7 +67,7 @@ hr.hr-text {
   position: relative;
     border: none;
     height: 1px;
-    background: #C44370;
+    background: #e43b44;
     margin-left: 3rem;
     margin-right: 3rem;
 }
@@ -74,7 +75,7 @@ hr.hr-text {
 hr.hr-text::before {
   content: attr(data-content);
   display: inline-block;
-  background: #C44370;
+  background: #e43b44;
   font-weight: bold;
   font-size: 0.85rem;
   color: #302631;
@@ -97,13 +98,27 @@ body .modal-dialog { /* Width */
   display: flex !important;
   justify-content: center;
   align-items: center;
-  background: #302631;
+  background: #1e161f8e;
 
 }
 
 .modal-open .modal {
    z-index: 1050;
 }
+
+.modal-content {
+  background-color: #2c2328;
+  color: #ffffff;
+}
+
+.modal-foot {
+  background-color: #2c2328;
+  color: #ffffff;
+  padding: 1rem;
+  display: flex;
+  justify-content: right;
+}
+
 
 .blob-button
 {
@@ -113,8 +128,8 @@ body .modal-dialog { /* Width */
 
   line-height: 1;
   transition: all .5s ease;
-  color: #C44370;
-  border: 3px solid #C44370;
+  color: #c7baba;
+  border: 3px solid #e43b44;
   text-align: center;
   background-color: transparent;
   outline: none;
@@ -123,12 +138,12 @@ body .modal-dialog { /* Width */
 
 .blob-button:hover{
   color: #302631;
-  background-color: #C44370;
+  background-color: #e43b44;
   text-decoration: none;
 }
 
 .githubIcon{
-  color: #C44370;
+  color: #e43b44;
   text-align: center;
   padding: 0.5rem;
   display: flex;
