--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -45,7 +45,7 @@ body{
   border: 3px solid #e43b44;
   border-radius: 4px;
 
-  color: #c7baba;
+  color: #ffffff;
   text-shadow: 0px 4px #0000005b;
 }
 
@@ -128,7 +128,7 @@ body .modal-dialog { /* Width */
 
   line-height: 1;
   transition: all .5s ease;
-  color: #c7baba;
+  color: #ffffff;
   border: 3px solid #e43b44;
   text-align: center;
   background-color: transparent;
