--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -39,7 +39,7 @@ body{
   background-color: #120e13;
   box-shadow: 0px 10px #00000071;
 
-  min-height: 26rem;
+  min-height: 28rem;
 
   border-color: #d81d26;
   border: 3px solid #d81d26;
@@ -47,6 +47,13 @@ body{
 
   color: #ffffff;
   text-shadow: 0px 4px #0000005b;
+}
+
+.cardCoverImage {
+  width:  100%;
+  height: 12rem;
+  justify-content: center;
+  justify-items: center;
 }
 
 .card img {
@@ -127,7 +134,7 @@ body .modal-dialog { /* Width */
   margin-right: 0.2rem;
 
   line-height: 1;
-  transition: all .2s ease;
+  transition: all .1s ease;
   color: #ffffff;
   border: 3px solid #d81d26;
   text-align: center;
