--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(-45deg, #202429, #1d202b);
+  background: var(--bg-color);
 
 }
 
@@ -13,6 +13,14 @@ body{
   100% {
     background-position: 0% 50%;
   }
+}
+
+/* Variables */
+:root {
+  --bg-color: #090b0e;
+  --fg-color: #120e13b9;
+  --highlight-1: #d81d45;
+  --highlight-2: #f76622;
 }
 
 .titlebar {
@@ -49,26 +57,57 @@ body{
   text-shadow: 0px 5px #0000002f;
 }
 
+.card-back  {
+  position: absolute;
+  display: inline-block;
+
+  margin-top: 2rem;
+
+  width: 100%;
+  height: 100%;
+  z-index: -100;
+  border-radius: 2rem;
+
+  transform: rotate(-2deg);
+
+  background-image: linear-gradient(-45deg,var(--highlight-1),var(--highlight-2),#00000000);
+  
+}
+
 .card  {
-  padding: 1rem;
-  background-color: #120e13;
+  background-color: var(--fg-color);
   box-shadow: 0px 10px #00000071;
 
+  margin-top: 2rem;
   min-height: 28rem;
 
-  border-color: #d81d45;
-  border: 3px solid #d81d45;
-  border-radius: 4px;
+  border-color: var(--highlight-1);
+  border: 3px solid var(--highlight-1);
+  border-radius: 2rem;
+
+  overflow: hidden;
+
+  background-position: center;
+  background-size:cover;
+  background-blend-mode: multiply;
 
   color: #ffffff;
   text-shadow: 0px 4px #0000005b;
+  z-index: 100;
+}
+
+.card-text {
+  color: #a0a0a0;
 }
 
 .cardCoverImage {
-  width:  100%;
-  height: 12rem;
+  width:  125%;
+  height: 125%;
   justify-content: center;
   justify-items: center;
+  z-index: -10;
+  display: inline-block;
+  position: absolute;
 }
 
 .card img {
@@ -89,7 +128,7 @@ hr.hr-text {
   position: relative;
     border: none;
     height: 1px;
-    background: #d81d45;
+    background: var(--highlight-1);
     margin-left: 3rem;
     margin-right: 3rem;
 }
@@ -97,7 +136,7 @@ hr.hr-text {
 hr.hr-text::before {
   content: attr(data-content);
   display: inline-block;
-  background: #d81d45;
+  background: var(--highlight-1);
   font-weight: bold;
   font-size: 0.85rem;
   color: #302631;
@@ -151,7 +190,7 @@ body .modal-dialog { /* Width */
   line-height: 1;
   transition: all .1s ease;
   color: #ffffff;
-  border: 3px solid #d81d45;
+  border: 3px solid var(--highlight-1);
   text-align: center;
   background-color: transparent;
   outline: none;
@@ -160,12 +199,12 @@ body .modal-dialog { /* Width */
 
 .blob-button:hover{
   color: #302631;
-  background-color: #d81d45;
+  background-color: var(--highlight-1);
   text-decoration: none;
 }
 
 .githubIcon{
-  color: #d81d45;
+  color: var(--highlight-1);
   text-align: center;
   padding: 0.5rem;
   display: flex;
