--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -220,3 +220,12 @@ body .modal-dialog { /* Width */
 .githubIcon img:hover{
   opacity: 25%;
 }
+
+.carousel-control-prev {
+  mix-blend-mode: difference;
+}
+
+.carousel-control-next {
+  mix-blend-mode: difference;
+}
+
